--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "components": "npx babel ./src/js/components/ --extensions .ts,.tsx --out-dir ./src/gen/components/",
+    "components:watch": "yarn components --watch",
+    "dev": "yarn components && concurrently \"yarn components:watch\" \"yarn start\"",
     "sc": "shadow-cljs",
     "server": "shadow-cljs stop && shadow-cljs start",
     "start": "shadow-cljs watch app",
@@ -17,23 +20,40 @@
     "clean": "rimraf public/js"
   },
   "devDependencies": {
+    "@babel/cli": "7.15.4",
+    "@babel/core": "7.15.0",
+    "@babel/plugin-proposal-class-properties": "7.14.5",
+    "@babel/plugin-proposal-object-rest-spread": "7.15.6",
+    "@babel/plugin-proposal-private-methods": "7.14.5",
+    "@babel/plugin-proposal-private-property-in-object": "7.15.4",
+    "@babel/plugin-transform-runtime": "7.15.0",
+    "@babel/preset-env": "7.15.6",
+    "@babel/preset-react": "7.14.5",
+    "@babel/preset-typescript": "7.15.0",
     "@testing-library/dom": "^7.19.0",
-    "@testing-library/react": "^10.4.3",    
+    "@testing-library/react": "^10.4.3",
+    "babel-loader": "8.2.2",
+    "babel-plugin-module-resolver": "4.1.0",
+    "babel-plugin-styled-components": "1.13.2",
+    "babel-plugin-transform-imports": "2.0.0",
     "clj-kondo": "2020.11.7",
+    "concurrently": "6.5.1",
     "highlight.js": "10.1.1",
     "jsdom": "^16.2.2",
     "jsdom-global": "^3.0.2",
-    "marked": "^1.1.0",    
+    "marked": "^1.1.0",
     "rimraf": "~3.0.2",
     "serve-handler": "~6.1.3",
     "shadow-cljs": "~2.10.13",
     "taiko": "~1.0.12",
     "taiko-diagnostics": "~0.4.0",
+    "typescript": "4.3.5",
     "zprint-clj": "~0.8.0"
   },
   "dependencies": {
+    "@babel/runtime": "7.15.4",
     "create-react-class": "~15.6.3",
-    "react": "~16.8.0",
-    "react-dom": "~16.8.0"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
