--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   },
   "dependencies": {
     "@babel/runtime": "7.15.4",
+    "@codesandbox/sandpack-react": "^0.13.1",
     "create-react-class": "~15.6.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
