--- a/package.json
+++ b/package.json
@@ -60,9 +60,11 @@
     "@codesandbox/sandpack-react": "^0.13.1",
     "@headlessui/react": "^1.4.3",
     "@heroicons/react": "^1.0.5",
+    "@react-spring/parallax": "^9.4.4",
     "classnames": "^2.3.1",
     "create-react-class": "~15.6.3",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-spring": "^9.4.4"
   }
 }
