--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "create-react-class": "~15.6.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-query": "^3.39.1",
     "react-spring": "^9.4.4"
   }
 }
