--- a/package.json
+++ b/package.json
@@ -63,9 +63,8 @@
         "@headlessui/react": "^1.4.3",
         "@heroicons/react": "^1.0.5",
         "classnames": "^2.3.1",
-        "create-react-class": "~15.6.3",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
+        "react": "18.0.0",
+        "react-dom": "18.0.0",
         "react-query": "^3.39.1"
     }
 }
